[workspace]
resolver = "2"
members = [
    "meta",
    "ast",
    "parse",
    "value",
    "eval",
    "rimu",
    "repl",
    "cli",
    "play/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

description = "A data structure template system."
readme = "README.md"
homepage = "https://rimu.dev"
repository = "https://github.com/ahdinosaur/rimu"
license = "Apache-2.0"
keywords = ["rimu", "functional", "data", "template", "config"]
categories = ["compilers", "config", "data-structures", "template-engine"]

[workspace.dependencies.rimu-meta]
version = "0.1.0"
path = "meta"

[workspace.dependencies.rimu-ast]
version = "0.1.0"
path = "ast"

[workspace.dependencies.rimu-parse]
version = "0.1.0"
path = "parse"

[workspace.dependencies.rimu-value]
version = "0.1.0"
path = "value"

[workspace.dependencies.rimu-eval]
version = "0.1.0"
path = "eval"

[workspace.dependencies.rimu]
version = "0.1.0"
path = "rimu"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[profile.release.package."rimu-playground-wasm"]
opt-level = "s"
