[workspace]
resolver = "2"
members = [
    "meta",
    "ast",
    "parse",
    "value",
    "eval",
    "stdlib",
    "rimu",
    "repl",
    "cli",
    "play/wasm",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

rust-version = "1.70.0"
description = "A data structure template system."
readme = "README.md"
homepage = "https://rimu.dev"
repository = "https://github.com/ahdinosaur/rimu"
license = "MIT OR Apache-2.0"
keywords = ["rimu", "functional", "data", "template", "config"]
categories = ["compilers", "config", "data-structures", "template-engine"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[profile.release.package."rimu-playground-wasm"]
opt-level = "s"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
