[workspace]
resolver = "2"
members = [
    "meta",
    "ast",
    "parse",
    "value",
    "eval",
    "stdlib",
    "rimu",
    "repl",
    "cli",
    "play/wasm",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

rust-version = "1.81.0"
description = "A data structure template system."
readme = "README.md"
homepage = "https://rimu.dev"
repository = "https://github.com/ahdinosaur/rimu"
license = "MIT OR Apache-2.0"
keywords = ["rimu", "functional", "data", "template", "config"]
categories = ["compilers", "config", "data-structures", "template-engine"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[profile.release.package."rimu-playground-wasm"]
opt-level = "s"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
