[package]
name = "rimu-ast"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta = { path = "../meta", version = "0.2.0" }
rust_decimal = "1.31.0"
indexmap = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
