[package]
name = "rimu-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu.workspace = true
ariadne = "0.3.0"
clap = { version = "4.4.2", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap-parse"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
toml = "0.7.6"
