[package]
name = "rimu-cli"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu = { path = "../rimu", version = "0.2.0" }
ariadne = "0.5.1"
clap = { version = "4.4.18", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.6"
