[package]
name = "rimu-eval"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta.workspace = true
rimu-ast.workspace = true
rimu-value.workspace = true
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
thiserror = "1.0.44"
indexmap = "2.0.0"

[dev-dependencies]
rimu-parse.workspace = true
pretty_assertions = "1.4.0"
