[package]
name = "rimu-meta"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
ariadne = "0.3.0"
thiserror = "1.0.69"
serde = { version = "1.0.228", features = ["derive"] }
