[package]
name = "rimu-parse"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta.workspace = true
rimu-ast.workspace = true
rust_decimal = "1.31.0"
chumsky = "0.9.2"
line-span = "0.1.5"
indexmap = "2.0.0"
thiserror = "1.0.44"

[dev-dependencies]
pretty_assertions = "1.4.0"
