[package]
name = "rimu-parse"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta = { path = "../meta", version = "0.2.0" }
rimu-ast = { path = "../ast", version = "0.2.0" }
rust_decimal = "1.39.0"
chumsky = "0.9.3"
line-span = "0.1.5"
indexmap = "2.11.4"
thiserror = "1.0.69"

[dev-dependencies]
pretty_assertions = "1.4.1"
