[package]
name = "rimu-repl"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu = { path = "../rimu", version = "0.2.0" }
rustyline = "17.0.2"
