[package]
name = "rimu-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
clap = { version = "4.4.2", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap-parse"] }
rimu = { path = "../rimu" }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
toml = "0.7.6"
