[package]
name = "rimu-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-report = { path = "../rimu-report" }
rimu-expr = { path = "../rimu-expr" }
rimu-value = { path = "../rimu-value" }
rimu-env = { path = "../rimu-env" }
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
thiserror = "1.0.44"
ariadne = "0.3.0"

[dev-dependencies]
map-macro = "0.2.6"
pretty_assertions = "1.4.0"
