[package]
name = "rimu-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta = { path = "../rimu-meta" }
rimu-ast = { path = "../rimu-ast" }
rimu-value = { path = "../rimu-value" }
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
thiserror = "1.0.44"
lazy_static = "1.4.0"
regex = "1.9.1"
indexmap = "2.0.0"

[dev-dependencies]
rimu-parse = { path = "../rimu-parse" }
pretty_assertions = "1.4.0"
