[package]
name = "rimu-expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.31.0"
rimu-report = { path = "../rimu-report" }
chumsky = { git = "https://github.com/zesterer/chumsky.git", default-features = false, features = ["std"] }
thiserror = "1.0.44"
ariadne = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
