[package]
name = "rimu-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "12.0.0"
rimu-report = { path = "../rimu-report" }
rimu-expr = { path = "../rimu-expr" }
rimu-value = { path = "../rimu-value" }
rimu-env = { path = "../rimu-env" }
rimu-eval = { path = "../rimu-eval" }
