[package]
name = "rimu-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky.git", default-features = false, features = ["std"] }
ariadne = "0.3.0"
thiserror = "1.0.44"
