[package]
name = "rimu-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rimu = { path = "../rimu" }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
