[package]
name = "rimu-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
rimu = { path = "../rimu" }
serde = "1.0.181"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
