[package]
name = "rimu"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "A data structure template system."
repository = "https://github.com/ahdinosaur/rimu"
keywords = []
categories = []
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta = { path = "../rimu-meta" }
rimu-ast = { path = "../rimu-ast" }
rimu-parse = { path = "../rimu-parse" }
rimu-value = { path = "../rimu-value" }
rimu-eval = { path = "../rimu-eval" }

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_yaml = "0.9.25"
