[package]
name = "rimu"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta.workspace = true
rimu-ast.workspace = true
rimu-parse.workspace = true
rimu-value.workspace = true
rimu-stdlib.workspace = true
rimu-eval.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_yaml = "0.9.25"
