[package]
name = "rimu"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta = { path = "../meta", version = "0.2.0" }
rimu-ast = { path = "../ast", version = "0.2.0" }
rimu-parse = { path = "../parse", version = "0.2.0" }
rimu-value = { path = "../value", version = "0.2.0" }
rimu-stdlib = { path = "../stdlib", version = "0.2.0" }
rimu-eval = { path = "../eval", version = "0.2.0" }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_yaml = "0.9.34"
