[package]
name = "rimu-stdlib"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta = { path = "../meta", version = "0.2.0" }
rimu-value = { path = "../value", version = "0.2.0" }
rimu-eval = { path = "../eval", version = "0.2.0" }
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
