[package]
name = "rimu-value"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta.workspace = true
rimu-ast.workspace = true
ryu = "1.0.15"
serde = "1.0.181"
thiserror = "1.0.44"
rust_decimal = { version = "1.31.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.31.0"
indexmap = { version = "2.0.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
