[package]
name = "rimu-value"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rimu-meta = { path = "../meta", version = "0.2.0" }
rimu-ast = { path = "../ast", version = "0.2.0" }
ryu = "1.0.20"
serde = "1.0.228"
thiserror = "2.0.17"
rust_decimal = { version = "1.39.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.39.0"
indexmap = { version = "2.11.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
