[package]
name = "rimu-playground-wasm"
version = "0.2.0"
publish = false
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.81"
rimu = { path = "../../rimu", version = "0.2.0" }
serde = "1.0.228"
serde_json = "1.0.145"
serde-wasm-bindgen = "0.5.0"
serde_yaml = "0.9.34"
toml = "0.7.8"
wasm-bindgen = "0.2.104"

[dev-dependencies]
wasm-bindgen-test = "0.3.54"
